Add patch number in versioning, Change encoding to UTF-8
- Add an executable flag for linux launch scripts
- Change project encoding from ISO-8859-1 to UTF-8
- Translate Eclipse autogenerated comments
- Add JUnit5 engine
- Add parameters with packages versions to the Maven configuration
- Update README.md
- Fix wrong encoded symbol (upper case Greek gamma letter)